--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.22.1"
+  },
+  "publishConfig": {
+    "registry": "http://nexus.lilyhi.com/repository/npm-hosted"
   }
 }
