--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .DS_Store
 node_modules
-/dist
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log
 
 # Editor directories and files
 .idea
